# suguru

./: photos.db  pyproject.toml  setup.sh
app/: database.py  main.py  models.py
app/services/: ollama_client.py  photo_evaluator.py
static/: index.html
